# ai-cost-compare

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  homebrew-resources.yml  publish.yml
Formula/: ai-cost-compare.rb  claude-cost-compare.rb
docs/: RELEASING.md
scripts/: export_demo.py  fetch_pypi_sdist.py  sync_formula_resources.py  update_formula.py
src/ai_cost_compare/: __init__.py  __main__.py  cli.py  config.py  config_store.py
src/ai_cost_compare/analysis/: deltas.py  verdicts.py  windows.py
src/ai_cost_compare/core/: config.py  deltas.py  errors.py  models.py  windows.py
src/ai_cost_compare/data/: ccusage.py  models.py  parser.py
src/ai_cost_compare/providers/: base.py  registry.py  verdict_spec.py
src/ai_cost_compare/providers/claude/: __init__.py  config.py  fetch.py  parse.py  provider.py  taxonomy.py  verdicts.py
src/ai_cost_compare/providers/cursor/: __init__.py  config.py  fetch.py  fetch_api.py  parse.py  provider.py  taxonomy.py  verdicts.py
src/ai_cost_compare/render/: components.py  formatters.py  report.py
src/claude_cost_compare/: __init__.py  __main__.py  cli.py  errors.py
src/claude_cost_compare/analysis/: deltas.py  verdicts.py  windows.py
src/claude_cost_compare/data/: ccusage.py  parser.py
src/claude_cost_compare/render/: components.py  console.py  formatters.py  report.py  theme.py
tests/: conftest.py  test_cli.py  test_config_store.py  test_parser.py  test_registry.py  test_render_snapshot.py  test_update_formula.py
tests/core/: test_deltas.py  test_errors.py  test_verdict_engine.py  test_windows.py
tests/fixtures/: sample_daily.json  sample_daily_v20.json
tests/fixtures/cursor/: sample_usage.csv
tests/providers/claude/: test_config.py  test_fetch.py  test_parse.py  test_provider.py  test_taxonomy.py  test_verdicts.py
tests/providers/cursor/: test_cursor_fetch.py  test_cursor_parse.py  test_cursor_provider.py  test_cursor_taxonomy.py  test_cursor_verdicts.py  test_fetch_api.py  test_parse.py
tests/render/: test_components.py  test_console.py  test_formatters.py  test_report.py
