[project]
name = "claude-cost-compare"
version = "0.1.0"
description = "Daily Claude cost analysis with before/after comparison and model health signals"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "Patrick Mazulo", email = "pmazulo@gmail.com" }]
keywords = ["claude", "cost", "ccusage", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Utilities",
]
dependencies = [
    "cyclopts>=4.0",
]

[project.scripts]
claude-cost-compare = "claude_cost_compare.cli:run"

[project.urls]
Homepage = "https://github.com/mazulo/claude-cost-compare"
Repository = "https://github.com/mazulo/claude-cost-compare"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/claude_cost_compare"]

[tool.hatch.build.targets.wheel.sources]
"src/claude_cost_compare" = "claude_cost_compare"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.9",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
