[project]
name = "ai-cost-compare"
version = "0.3.2"
description = "Daily AI usage cost analysis with before/after comparison and model health signals"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "Patrick Mazulo", email = "pmazulo@gmail.com" }]
keywords = ["ai", "claude", "cursor", "cost", "ccusage", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Utilities",
]
dependencies = [
    "cyclopts>=4.0",
]

[project.optional-dependencies]
cursor-api = ["httpx>=0.27"]

[project.scripts]
ai-cost-compare = "ai_cost_compare.cli:run"
aicost = "ai_cost_compare.cli:run"
claude-cost-compare = "ai_cost_compare.cli:run_claude_legacy"
cccompare = "ai_cost_compare.cli:run_claude_legacy"

[project.urls]
Homepage = "https://github.com/mazulo/ai-cost-compare"
Repository = "https://github.com/mazulo/ai-cost-compare"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ai_cost_compare"]

[tool.hatch.build.targets.wheel.sources]
"src/ai_cost_compare" = "ai_cost_compare"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.9",
    "httpx>=0.27",
    "pytest-cov>=7.1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["--import-mode=importlib"]

[tool.coverage.run]
source = ["ai_cost_compare"]
branch = true

[tool.coverage.report]
show_missing = true
fail_under = 88

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
